test/corpus/includes.txt
===============================================================================
Include
===============================================================================

include "source.mc"

---

(program (includes (include (string))))

===============================================================================
Includes
===============================================================================

include "source1.mc"
include "source2.mc"

---

(program (includes (include (string))
                   (include (string))))
