test/corpus/literals.txt
===============================================================================
String literal
===============================================================================

mexpr
"This is a string"

---

(program (mexpr (string)))

===============================================================================
Char literal
===============================================================================

mexpr
'c'

---

(program (mexpr (char)))

===============================================================================
Int literal
===============================================================================

mexpr
0

---

(program (mexpr (int)))

===============================================================================
Float literal
===============================================================================

mexpr
0.

---

(program (mexpr (float)))

===============================================================================
Float literal with decimal
===============================================================================

mexpr
0.0

---

(program (mexpr (float)))

===============================================================================
Float literal scientific notation
===============================================================================

mexpr
1.E-2

---

(program (mexpr (float)))

===============================================================================
Bool literal true
===============================================================================

mexpr
true

---

(program (mexpr (bool)))

===============================================================================
Bool literal false
===============================================================================

mexpr
false

---

(program (mexpr (bool)))

===============================================================================
Never literal
===============================================================================

mexpr
never

---

(program (mexpr (never)))
